--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -64,3 +64,88 @@
     padding: 15px;
     text-align: center;
 }
+
+/*Home*/
+.setmain {
+  width: 100%;
+  height: 1000px;
+  padding: 20px;
+  display: block;
+}
+
+.setmain .topsetmain {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 20px;
+  padding: 20px;
+  display: block;
+  background-color: rgba(0,0,0,.03);
+  float: left;
+  box-shadow: 3px 5px 3px #bbb;
+}
+.setmain .topsetmain:hover {
+  border: 1px solid black;
+}
+
+.setmain .leftsetmain {
+  width: 800px;
+  height: 200px;
+  display: block;
+  float: left;
+}
+
+.leftsetmain .headerleftsetmain {
+  width: 800px;
+  height: 160px;
+  margin-bottom: 20px;
+  padding: 20px;
+  display: block;
+  background-color: rgba(0,0,0,.03);
+  float: left;
+  box-shadow: 3px 5px 3px #bbb;
+}
+.leftsetmain .headerleftsetmain:hover {
+  border: 1px solid black;
+}
+
+.leftsetmain .bodyleftsetmain {
+  width: 800px;
+  height: 50px;
+  margin-bottom: 20px;
+  padding: 20px;
+  display: block;
+  background-color: rgba(0,0,0,.03);
+  float: left;
+  box-shadow: 3px 5px 3px #bbb;
+}
+.leftsetmain .bodyleftsetmain:hover {
+  border: 1px solid black;
+}
+
+.leftsetmain .footerleftsetmain {
+  width: 800px;
+  height: 200px;
+  margin-bottom: 20px;
+  padding: 20px;
+  display: block;
+  background-color: rgba(0,0,0,.03);
+  float: left;
+  box-shadow: 3px 5px 3px #bbb;
+}
+.leftsetmain .footerleftsetmain:hover {
+  border: 1px solid black;
+}
+
+.setmain .rightsetmain {
+  width: 250px;
+  height: 450px;
+  padding: 20px;
+  display: block;
+  background-color: rgba(0,0,0,.03);
+  float: right;
+  box-shadow: 3px 5px 3px #bbb;
+  /*box-shadow: inset 1px 1px 0 rgba(0,0,0,.1), inset 0 -1px 0 rgba(0,0,0,.07); // within block*/ 
+}
+.setmain .rightsetmain:hover {
+  border: 1px solid black;
+}
